# sdk

./: .gitignore  LICENSE.md  README.md  eslint.config.js  mypy.ini  package-lock.json  package.json
.github/: dependabot.yml
go/: .gitignore  README.md  camera_config.go  camera_detection.go  camera_device.go  contract.go  (+77 more)
python/: .gitignore  README.md  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml
python/camera_ui_sdk/: __init__.py  types.py
python/camera_ui_sdk/camera/: __init__.py  config.py  detection.py  device.py  enums.py  events.py  frames.py  recording.py  streaming.py
python/camera_ui_sdk/internal/: __init__.py  camera_config_internal.py  camera_enums.py  camera_wire.py  event_emitter.py  manager_rpc.py  sensor_rpc.py  sensor_triggers.py  shared_utils.py  streaming_internal.py
python/camera_ui_sdk/manager/: __init__.py
python/camera_ui_sdk/observable/: __init__.py
python/camera_ui_sdk/plugin/: __init__.py  api.py  contract.py  helper.py  interfaces.py  notifier.py  oauth.py
python/camera_ui_sdk/sensor/: __init__.py  audio.py  base.py  battery.py  classifier.py  clip.py  contact.py  detection.py  doorbell.py  face.py  garage.py  humidity.py  leak.py  license_plate.py  light.py  lock.py  motion.py  object.py  occupancy.py  ptz.py  security_system.py  siren.py  smoke.py  spec.py  switch.py  temperature.py
python/camera_ui_sdk/storage/: __init__.py
python/docs/: index.md  plugin-guide.md
python/docs/api/: camera.md  index.md  manager.md  observable.md  plugin.md  sensor.md  storage.md  types.md
python/docs/stylesheets/: extra.css
python/overrides/partials/: source.html
python/scripts/: build.py
python/tests/: test_event_emitter.py  test_observable.py
(+100 files in other folders)
